# SolidTranslate-Launch

./: Main.hs  STLaunch.cabal
snaplets/heist/templates/: 404.tpl  abstractbase.tpl  analytics.tpl  base.tpl  bottomcontent.tpl  error.tpl  faq.tpl  forgot.tpl  header.tpl  index.tpl  invalidemail.tpl  navbar.tpl  thankyou.tpl
snaplets/postgresql-simple/: devel.cfg
ssl/: cert.pem  key.pem
static/css/: bootstrap.min.css  screen.css
static/js/: index.js
