Name:                SolidTranslate
Version:             0.1
Synopsis:            Translates CAD Files to earlier versions
Description:         Translates CAD Files to earlier versions
License:             AllRightsReserved
Author:              David Johnson && Keith Rice
Maintainer:          djohnson.m@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable launch
  main-is: Main.hs
  ghc-options: -threaded -Wall -O2

  Build-depends:
    bytestring                == 0.10.0.2,
    HTTP                      == 4000.2.8,
    email-validate            == 1.0.0,
    directory                 == 1.2.0.1,
    vector                    == 0.10.0.1,
    hashable                  == 1.1.2.5,
    unordered-containers      == 0.2.3.0,
    errors                    == 1.4.3,
    filepath                  == 1.3.0.1,
    network                   == 2.4.1.2,
    heist                     == 0.13.0.2,
    acid-state                == 0.12.1,
    aeson                     == 0.6.2.1,
    MonadCatchIO-transformers == 0.3.0.0,
    transformers              == 0.3.0.0,
    mtl                       == 2.1.2,
    snap                      == 0.13.0.4,
    enumerator                == 0.4.20,
    snap-core                 == 0.9.4.1,
    snap-server               == 0.9.3.4,
    snap-loader-static        == 0.9.0.1,
    snaplet-postgresql-simple == 0.4.1,
    time                      == 1.4.0.1,
    text                      == 0.11.3.1

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.11

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -rtsopts -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind 
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans
